# studying-python-avancado

./: README.md
01-ambientes-virtuais/: README.md
01-ambientes-virtuais/poetry/projeto1/: pyproject.toml
01-ambientes-virtuais/poetry/projeto2/: pyproject.toml
01-ambientes-virtuais/virtualenv/projeto1/: main.py  requirements.txt
02-módulos-pacotes/: README.md  main.py  setup.py
02-módulos-pacotes/operações/: multiplica.py
03-funcoes-tipos/: README.md  exercise.md  mkdocs.yml  pyproject.toml
03-funcoes-tipos/docs/: list-words.md
03-funcoes-tipos/site/: 404.html  index.html
03-funcoes-tipos/src/: main.py
05-high-order-functions/: README.md  pyproject.toml
05-high-order-functions/src/: main.py
07-iterators-generators/: README.md  pyproject.toml
07-iterators-generators/src/: main.py
08-dicionario/: README.md  pyproject.toml
08-dicionario/src/: main.py
10-arg-kwargs/: README.md  pyproject.toml
10-arg-kwargs/src/: 01-exercise.py  02-exercise.py  03-exercise.py
11-erros-excecoes/: README.md  pyproject.toml
11-erros-excecoes/src/: main.py
12-OO-basic/: README.md  pyproject.toml
12-OO-basic/src/: main.py
13-OO-avancado-heranca/: README.md  pyproject.toml
13-OO-avancado-heranca/src/: main.py
16-pytest/: README.md  pyproject.toml  report.xml
16-pytest/src/: main.py
16-pytest/tests/: test_main.py
