[tool.poetry]
name = "05-high-order-functions"
version = "0.1.0"
description = "Exercício sobre high-order functions"
authors = ["Janaína"]
readme = "README.md"
packages = [{include = "05_high_order_functions"}]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
