[tool.poetry]
name = "08-dicionario"
version = "0.1.0"
description = "Exercício referente a aula 08 sobre dicionário em Python"
authors = ["Janaína"]
readme = "README.md"
packages = [{include = "08_dicionario"}]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
