[tool.poetry]
name = "10-arg-kwargs"
version = "0.1.0"
description = "Exercício referente a aula 10 sobre args e kwargs em Python"
authors = ["Janaína"]
readme = "README.md"
packages = [{include = "10_arg_kwargs"}]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
