[tool.poetry]
name = "12-oo-basic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "12_oo_basic"}]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
